--- a/app/pug/pages/application-page/step-2/card-5.pug
+++ b/app/pug/pages/application-page/step-2/card-5.pug
@@ -29,4 +29,5 @@
                   +checkbox({ label:'Education'})
           .row
             .col-12.col-md-6
-              +input({bordered:true})(type="text" placeholder="Custom")
+              +input-animation({label:'Custom:'})(type="text" id="custom")
+
