--- a/app/pug/pages/application-page/step-1/card-3.pug
+++ b/app/pug/pages/application-page/step-1/card-3.pug
@@ -5,46 +5,47 @@
         h4 Standard proofreading
       .row-group
         .row-group__item
-          +radio({label:'Yes', name:'proofreading', value:'yes', checked:true})
+          +radio({label:'Yes', name:'proofreading', value:'yes'})(data-radio-toggle)
         .row-group__item
-          +radio({label:'No', name:'proofreading', value:'no'})
+          +radio({label:'No', name:'proofreading', value:'no', checked:true})
 
-  .application-form__card-line
-    .row
-      .col-12.col-md-6
-        .form-group
-          .form-group__header
-            p How do you calculate the price?
-          +select({
-            label:{name:'select1', content:`<span>Select 1</span>`},
-            options:[
-              {name:'select1', content:`<span>Select 1</span>`},
-              {name:'select2', content:`<span>Select 2</span>`},
-              {name:'select3', content:`<span>Select 3</span>`},
-            ]
-          })
+  div(data-radio-toggle-content="proofreading")
+    .application-form__card-line
+      .row
+        .col-12.col-md-6
+          .form-group
+            .form-group__header
+              p How do you calculate the price?
+            +select({
+              label:{name:'select1', content:`<span>Select 1</span>`},
+              options:[
+                {name:'select1', content:`<span>Select 1</span>`},
+                {name:'select2', content:`<span>Select 2</span>`},
+                {name:'select3', content:`<span>Select 3</span>`},
+              ]
+            })
 
-  .application-form__card-line
-    .form-group
-      .form-group__header
-        p What languages do you proofread?
-      .column-group.column-group--sm
-        +times(2)
-          .column-group__item
-            .row
-              .col-12.col-md-4.mb-3.mb-md-0
-                +lang-alt-select()
-              .col-12.col-md-8
-                .input-group
-                  .input-group__prepend
-                    p Your prefered price per <span class="font-bold">1 word</span>
-                  .input-group__input
-                    +input({})(type="number" placeholder="0.00")
-                  .input-group__append.input-group__append--p-0
-                    +currency-select()
+    .application-form__card-line
+      .form-group
+        .form-group__header
+          p What languages do you proofread?
+        .column-group.column-group--sm
+          +times(2)
+            .column-group__item
+              .row
+                .col-12.col-md-4.mb-3.mb-md-0
+                  +lang-alt-select()
+                .col-12.col-md-8
+                  .input-group
+                    .input-group__prepend
+                      p Your prefered price per <span class="font-bold">1 word</span>
+                    .input-group__input
+                      +input({})(type="number" placeholder="0.00")
+                    .input-group__append.input-group__append--p-0
+                      +currency-select()
 
-  .application-form__card-line
-    +button({type:'bordered'})(type="button")
-      span Add combination
-      span.button__icon
-        +icon({name:'plus', fill:'surfie-green', width:'14', height:'14'})
+    .application-form__card-line
+      +button({type:'bordered'})(type="button")
+        span Add combination
+        span.button__icon
+          +icon({name:'plus', fill:'surfie-green', width:'14', height:'14'})
