--- a/app/pug/pages/application-page/step-1/card-5.pug
+++ b/app/pug/pages/application-page/step-1/card-5.pug
@@ -5,42 +5,43 @@
         h4 Interpreting?
       .row-group
         .row-group__item
-          +radio({label:'Yes', name:'interpreting', value:'yes', checked:true})
+          +radio({label:'Yes', name:'interpreting', value:'yes'})(data-radio-toggle)
         .row-group__item
-          +radio({label:'No', name:'interpreting', value:'no'})
+          +radio({label:'No', name:'interpreting', value:'no', checked:true})
 
-  +times(2)
-    .application-form__card-line
-      .row
-        .col-12.col-md-6.col-lg-7.mb-6.mb-md-0
-          .form-group
-            .form-group__header
-              +checkbox({ label:'Simultaneous Interpretig?', checked:true })
-            .row
-              .col-12.col-lg-6.mb-4.mb-lg-0
-                .input-group
-                  .input-group__prepend
-                    p From
-                  .input-group__input
-                    +lang-alt-select()
-              .col-12.col-lg-6
-                .input-group
-                  .input-group__prepend
-                    p To
-                  .input-group__input
-                    +lang-alt-select()
-        .col-12.col-md-5.col-lg-5
-          .form-group
-            .form-group__header
-              p Your prefered price per <span class="font-bold">1 hr</span>
-            .input-group
-              .input-group__input
-                +input({})(type="number" placeholder="0.00")
-              .input-group__append.input-group__append--p-0
-                +currency-select()
+  div(data-radio-toggle-content="interpreting")
+    +times(2)
+      .application-form__card-line
+        .row
+          .col-12.col-md-6.col-lg-7.mb-6.mb-md-0
+            .form-group
+              .form-group__header
+                +checkbox({ label:'Simultaneous Interpretig?', checked:true })
+              .row
+                .col-12.col-lg-6.mb-4.mb-lg-0
+                  .input-group
+                    .input-group__prepend
+                      p From
+                    .input-group__input
+                      +lang-alt-select()
+                .col-12.col-lg-6
+                  .input-group
+                    .input-group__prepend
+                      p To
+                    .input-group__input
+                      +lang-alt-select()
+          .col-12.col-md-5.col-lg-5
+            .form-group
+              .form-group__header
+                p Your prefered price per <span class="font-bold">1 hr</span>
+              .input-group
+                .input-group__input
+                  +input({})(type="number" placeholder="0.00")
+                .input-group__append.input-group__append--p-0
+                  +currency-select()
 
-    .application-form__card-line
-      +button({type:'bordered'})(type="button")
-        span Add combination
-        span.button__icon
-          +icon({name:'plus', fill:'surfie-green', width:'14', height:'14'})
+      .application-form__card-line
+        +button({type:'bordered'})(type="button")
+          span Add combination
+          span.button__icon
+            +icon({name:'plus', fill:'surfie-green', width:'14', height:'14'})
