--- a/app/pug/pages/application-page/step-1/card-7.pug
+++ b/app/pug/pages/application-page/step-1/card-7.pug
@@ -5,47 +5,48 @@
         h4 Transcribing?
       .row-group
         .row-group__item
-          +radio({label:'Yes', name:'transcribing', value:'yes', checked:true})
+          +radio({label:'Yes', name:'transcribing', value:'yes'})(data-radio-toggle)
         .row-group__item
-          +radio({label:'No', name:'transcribing', value:'no'})
+          +radio({label:'No', name:'transcribing', value:'no', checked:true})
 
-  .application-form__card-line
-    .row
-      .col-12.col-md-6.mb-6.mb-md-0
-        .form-group
-          .form-group__header
-            p What languages do you write?
-          .row
-            .col-12.col-lg-6
-              +lang-alt-select()
-      .col-12.col-md-6
-        .form-group
-          .form-group__header
-            p Your prefered price per <span class="font-bold">1 word</span>
-          .row
-            .col-12.col-lg-8
-              .input-group
-                .input-group__input
-                  +input({})(type="number" placeholder="0.00")
-                .input-group__append.input-group__append--p-0
-                  +currency-select()
-
-  .application-form__card-line
-    +button({type:'bordered'})(type="button")
-      span Add combination
-      span.button__icon
-        +icon({name:'plus', fill:'surfie-green', width:'14', height:'14'})
-
-  .application-form__card-line
-    .form-group
-      .form-group__header
-        +checkbox({ label:'Additional (custom) services:', checked:true })
+  div(data-radio-toggle-content="transcribing")
+    .application-form__card-line
       .row
+        .col-12.col-md-6.mb-6.mb-md-0
+          .form-group
+            .form-group__header
+              p What languages do you write?
+            .row
+              .col-12.col-lg-6
+                +lang-alt-select()
         .col-12.col-md-6
-          .input-group
-            .input-group__prepend
-              p Your price per <span class="font-bold">1 hr</span>
-            .input-group__input
-              +input({})(type="number" placeholder="0.00")
-            .input-group__append.input-group__append--p-0
-              +currency-select()
+          .form-group
+            .form-group__header
+              p Your prefered price per <span class="font-bold">1 word</span>
+            .row
+              .col-12.col-lg-8
+                .input-group
+                  .input-group__input
+                    +input({})(type="number" placeholder="0.00")
+                  .input-group__append.input-group__append--p-0
+                    +currency-select()
+
+    .application-form__card-line
+      +button({type:'bordered'})(type="button")
+        span Add combination
+        span.button__icon
+          +icon({name:'plus', fill:'surfie-green', width:'14', height:'14'})
+
+    .application-form__card-line
+      .form-group
+        .form-group__header
+          +checkbox({ label:'Additional (custom) services:', checked:true })
+        .row
+          .col-12.col-md-6
+            .input-group
+              .input-group__prepend
+                p Your price per <span class="font-bold">1 hr</span>
+              .input-group__input
+                +input({})(type="number" placeholder="0.00")
+              .input-group__append.input-group__append--p-0
+                +currency-select()
