--- a/app/pug/pages/application-page/step-2/card-2.pug
+++ b/app/pug/pages/application-page/step-2/card-2.pug
@@ -8,24 +8,25 @@
         h4 Do you have a diploma?
       .row-group
         .row-group__item
-          +radio({label:'Yes', name:'diploma', value:'yes', checked:true})
+          +radio({label:'Yes', name:'diploma', value:'yes'})(data-radio-toggle)
         .row-group__item
-          +radio({label:'No', name:'diploma', value:'no'})
+          +radio({label:'No', name:'diploma', value:'no', checked:true})
 
-  .application-form__card-line
-    .row
-      .col-12.col-lg-8
-        .form-group
-          .form-group__header
-            p <span/ class="h3 text-surfie-green">#1</span> Do you have a diploma?
-          .row
-            .col-12.col-md-6.mb-5.mb-md-0
-              +input({bordered:true})(type="text" placeholder="Diploma type (ex. bacaular)")
-            .col-12.col-md-6
-              +input-animation({label:'Category:'})(type="text" value="Translator" id="category")
+  div(data-radio-toggle-content="diploma")
+    .application-form__card-line
+      .row
+        .col-12.col-lg-8
+          .form-group
+            .form-group__header
+              p <span/ class="h3 text-surfie-green">#1</span> Do you have a diploma?
+            .row
+              .col-12.col-md-6.mb-5.mb-md-0
+                +input({bordered:true})(type="text" placeholder="Diploma type (ex. bacaular)")
+              .col-12.col-md-6
+                +input-animation({label:'Category:'})(type="text" value="Translator" id="category")
 
-  .application-form__card-line
-    +button({type:'bordered'})(type="button")
-      span Add combination
-      span.button__icon
-        +icon({name:'plus', fill:'surfie-green', width:'14', height:'14'})
+    .application-form__card-line
+      +button({type:'bordered'})(type="button")
+        span Add combination
+        span.button__icon
+          +icon({name:'plus', fill:'surfie-green', width:'14', height:'14'})
