--- a/app/pug/pages/application-page/step-2/card-3.pug
+++ b/app/pug/pages/application-page/step-2/card-3.pug
@@ -8,14 +8,15 @@
         h4 Will you be able to issue the invoice for your services?
       .row-group
         .row-group__item
-          +radio({label:'Yes', name:'invoiceAbility', value:'yes', checked:true})
+          +radio({label:'Yes', name:'invoiceAbility', value:'yes'})(data-radio-toggle)
         .row-group__item
-          +radio({label:'No', name:'invoiceAbility', value:'no'})
+          +radio({label:'No', name:'invoiceAbility', value:'no', checked:true})
 
-  .application-form__card-line
-    .row
-      .col-12.col-md-6
-        .form-group
-          .form-group__header
-            p Regarding what document you can issue the invoice?
-          +textarea()(placeholder="Type here")
+  div(data-radio-toggle-content="invoiceAbility")
+    .application-form__card-line
+      .row
+        .col-12.col-md-6
+          .form-group
+            .form-group__header
+              p Regarding what document you can issue the invoice?
+            +textarea()(placeholder="Type here")
