--- a/app/pug/pages/application-page/step-2/card-6.pug
+++ b/app/pug/pages/application-page/step-2/card-6.pug
@@ -3,7 +3,7 @@
     .row-group__item
       +status-message({title:'Fill 2 nessesary fields.', icon:{name:'exclamation', width:'9', height:'22'}, color:'brick-red'})
     .row-group__item
-      +button({type:'bordered'})(type="button")
+      +button({type:'bordered', classes:'js-scroll-up'})(type="button")
         span Up
         .button__icon
           +icon({name:'arrow-up', fill:'surfie-green', width:'12', height:'16'})
