--- a/app/pug/partials/radio.pug
+++ b/app/pug/partials/radio.pug
@@ -1,7 +1,7 @@
 include /partials/input
 
 mixin radio(props = {})
-  -const { checked, classes, label, name, value } = props
+  -const { checked, classes, inputClasses, label, name, value } = props
   -
     const classnames = classNames({
       'radio': true,
@@ -10,6 +10,6 @@ mixin radio(props = {})
 
   label(class=classnames)
     .radio__box
-      input(class="radio__input" type="radio" checked=checked value=value name=name)
+      input(class="radio__input" type="radio" checked=checked value=value name=name)&attributes(attributes)
       span.radio__checkmark
     span.radio__name #{label}
