drag-and-drop-box component was created

--- a/app/pug/pages/application-page/step-1/_index.pug
+++ b/app/pug/pages/application-page/step-1/_index.pug
@@ -34,6 +34,6 @@ form.application-form
     include ./card-7
   .application-form__item
     .button-group
-      +button({classes:'button-group__button', type:'white'})(href="application-page-1.html")| Back
+      +button({classes:'button-group__button', bg:'white'})(href="application-page-1.html")| Back
       +button({classes:'button-group__button'})(href="application-page-2.html")| Next
-      +button({classes:'button-group__button', type:'transparent'})| Discard
+      +button({classes:'button-group__button', bg:'transparent'})| Discard
