--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -38,3 +38,4 @@
 @import ./components/form-steps
 @import ./components/documents-list
 @import ./components/document-list-item
+@import ./components/drag-and-drop-box
