--- a/app/pug/pages/application-page/step-1/_index.pug
+++ b/app/pug/pages/application-page/step-1/_index.pug
@@ -7,7 +7,7 @@ include /partials/checkbox
 include /partials/lang-alt-select
 include /partials/currency-select
 
-form.application-form
+.application-form
   .application-form__title
     h2 Application form <span class="text-surfie-green">1/3</span>
 
