--- a/app/pug/pages/application-page/step-2/card-4.pug
+++ b/app/pug/pages/application-page/step-2/card-4.pug
@@ -11,10 +11,8 @@
           | - Attach your document with that you can issue the invoice
   .application-form__card-line
     +drag-and-drop-box()
-  //- .application-form__card-line
-  //-   +documents-list()
-  //- .application-form__card-line
-  //-   +button({type:'bordered'})(type="button")
-  //-     span Add more
-  //-     span.button__icon
-  //-       +icon({name:'plus', fill:'surfie-green', width:'14', height:'14'})
+  .application-form__card-line
+    +button({type:'bordered'})(type="button")
+      span Add more
+      span.button__icon
+        +icon({name:'plus', fill:'surfie-green', width:'14', height:'14'})
