application-page-step-3 was added

--- a/app/pug/pages/application-page/step-2/_index.pug
+++ b/app/pug/pages/application-page/step-2/_index.pug
@@ -10,7 +10,7 @@ include /partials/documents-list
 include /partials/status-message
 include /partials/drag-and-drop-box
 
-.application-form
+form.application-form
   .application-form__title
     h2 Application form <span class="text-surfie-green">1/3</span>
 
