--- a/app/sass/components/input-animation.sass
+++ b/app/sass/components/input-animation.sass
@@ -8,6 +8,17 @@
       background-color: $c-white
       font-size: rem(12px)
       color: $c-tundora
+  // Modifiers
+  &--required
+    &:before
+      position: absolute
+      content: '*'
+      top: 50%
+      transform: translateY(-50%)
+      left: -12px
+      font-size: 15px
+      line-height: 0
+      color: $c-brick-red
   // Elemenst
   &__label
     position: absolute
