--- a/app/sass/abstract/variables.sass
+++ b/app/sass/abstract/variables.sass
@@ -39,3 +39,5 @@ $body-bg: $c-athens-gray
 $r-primary: 3px
 // Shadows
 $s-primary: 0px 4px 5px rgba(0, 0, 0, 0.05)
+// Overlays
+$o-primary: rgba(0, 0, 0, 0.54)
