--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -11,6 +11,7 @@
 @import ./base/cursor
 // Vendors
 @import ./vendors/simplebar
+@import ./vendors/jquery-modal
 // Pages
 @import ./pages/login-page
 @import ./pages/application-page
@@ -33,9 +34,11 @@
 @import ./components/button
 @import ./components/select
 @import ./components/status-message
+@import ./components/modal-dialog
 @import ./components/inner-header
 @import ./components/application-form
 @import ./components/form-steps
 @import ./components/documents-list
 @import ./components/document-list-item
 @import ./components/drag-and-drop-box
+@import ./components/registration-success-modal
