--- a/app/sass/vendor.sass
+++ b/app/sass/vendor.sass
@@ -1,2 +1,3 @@
 @import simplebar/dist/simplebar
-@import 'dropzone/dist/dropzone';
+@import 'dropzone/dist/dropzone'
+@import jquery-modal/jquery.modal
