--- a/app/pug/pages/application-page/step-3/_index.pug
+++ b/app/pug/pages/application-page/step-3/_index.pug
@@ -6,14 +6,12 @@ include /partials/checkbox
 form.application-form
   .application-form__title
     h2 Application form <span class="text-surfie-green">1/3</span>
-
   .application-form__item
     +form-steps([
       {title:'1. Services & Prices', done:true},
       {title:'2. Education & Legal', done:true},
       {title:'3. Contact information', active:true},
     ])
-
   .application-form__item
     include ./card-1
   .application-form__item
@@ -23,4 +21,4 @@ form.application-form
   .application-form__item
     include ./card-4
   .application-form__item
-    +button({fluid:true})(href="#")| Complete application
+    +button({fluid:true})(type="button" data-modal-open="registration-success-modal")| Complete application
