--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -645,6 +645,37 @@ p,
   opacity: 1;
 }
 
+.jquery-modal {
+  z-index: 1000;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+
+.blocker {
+  background: rgba(0, 0, 0, 0.54);
+}
+
+.modal {
+  position: relative;
+  width: 100%;
+  margin: 10px auto;
+  background-color: #FFFFFF;
+  border-radius: 3px;
+  padding: 0;
+  padding-bottom: 20px;
+}
+
+.modal__close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  z-index: 20;
+}
+
+.modal__body {
+  padding: 20px;
+}
+
 .login-page {
   position: relative;
   padding: 80px 0;
@@ -1660,6 +1691,27 @@ p,
   text-decoration: underline;
 }
 
+.modal-dialog {
+  position: relative;
+  width: 100%;
+  margin: 10px auto;
+  background-color: #FFFFFF;
+  border-radius: 3px;
+  padding: 0;
+  padding-bottom: 20px;
+}
+
+.modal-dialog__close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  z-index: 20;
+}
+
+.modal-dialog__body {
+  padding: 20px;
+}
+
 .inner-header {
   width: 100%;
   background-color: #FFFFFF;
@@ -1914,6 +1966,37 @@ p,
 
 .drag-and-drop-box__preview .simplebar-content .document-list-item:first-child {
   display: none;
+}
+
+.registration-success-modal {
+  max-width: 700px;
+  padding: 70px 15px 80px 15px;
+}
+
+.registration-success-modal__wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  text-align: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.registration-success-modal__icon {
+  margin-bottom: 13px;
+}
+
+.registration-success-modal__title {
+  margin-bottom: 20px;
+}
+
+.registration-success-modal__text {
+  margin-bottom: 50px;
 }
 
 @media (min-width: 361px) {
@@ -3036,6 +3119,10 @@ p,
 
   .button__append {
     right: 15px;
+  }
+
+  .registration-success-modal {
+    padding: 40px 15px 60px 15px;
   }
 }
 
