datepicker was implemented

--- a/app/pug/pages/application-page/step-3/_index.pug
+++ b/app/pug/pages/application-page/step-3/_index.pug
@@ -2,6 +2,7 @@ include /partials/form-steps
 include /partials/input-animation
 include /partials/button
 include /partials/checkbox
+include /partials/datepicker
 
 form.application-form
   .application-form__title
