--- a/app/pug/pages/application-page/step-3/card-3.pug
+++ b/app/pug/pages/application-page/step-3/card-3.pug
@@ -7,14 +7,14 @@
         .col-12.col-md-6
           .column-group.column-group--sm
             .column-group__item
-              +input-animation({label:'Account holder:', required:true})(type="text" id="holder")
+              +input-animation({label:'Account holder', required:true})(type="text" id="holder")
             .column-group__item
-              +input-animation({label:'Bank name:', required:true})(type="text" id="bankName")
+              +input-animation({label:'Bank name', required:true})(type="text" id="bankName")
             .column-group__item
-              +input-animation({label:'Bank account no:', required:true})(type="number" id="bankAccount")
+              +input-animation({label:'Bank account no', required:true})(type="number" id="bankAccount")
             .column-group__item
-              +input-animation({label:'Swift Number:', required:true})(type="number" id="swiftNumber")
+              +input-animation({label:'Swift Number', required:true})(type="number" id="swiftNumber")
             .column-group__item
-              +input-animation({label:'Bank code:', required:true})(type="number" id="bankCode")
+              +input-animation({label:'Bank code', required:true})(type="number" id="bankCode")
             .column-group__item
               +input-animation({label:'Paypal email if avaliable:'})(type="number" id="paypalEmail")
