--- a/app/pug/partials/radio.pug
+++ b/app/pug/partials/radio.pug
@@ -5,7 +5,7 @@ mixin radio(props = {})
   -
     const classnames = classNames({
       'radio': true,
-      [classes]: boxed,
+      [classes]: classes,
     })
 
   label(class=classnames)
