--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -12,6 +12,7 @@
 // Vendors
 @import ./vendors/simplebar
 @import ./vendors/jquery-modal
+@import ./vendors/flatpickr
 // Pages
 @import ./pages/login-page
 @import ./pages/application-page
@@ -42,3 +43,4 @@
 @import ./components/document-list-item
 @import ./components/drag-and-drop-box
 @import ./components/registration-success-modal
+@import ./components/datepicker
