--- a/app/sass/vendor.sass
+++ b/app/sass/vendor.sass
@@ -1,3 +1,4 @@
 @import simplebar/dist/simplebar
-@import 'dropzone/dist/dropzone'
+@import dropzone/dist/dropzone
 @import jquery-modal/jquery.modal
+@import flatpickr/dist/flatpickr
