--- a/app/pug/partials/checkbox.pug
+++ b/app/pug/partials/checkbox.pug
@@ -5,7 +5,7 @@ mixin checkbox(props = {})
   -
     const classnames = classNames({
       'checkbox': true,
-      [classes]: boxed,
+      [classes]: classes,
     })
 
   label(class=classnames)
