--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -3173,6 +3173,26 @@ p,
   .application-form__card--sm {
     padding: 18px 20px;
   }
+
+  .form-steps {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+  }
+
+  .form-steps__step {
+    width: calc( 100% - 10px);
+    -webkit-box-flex: unset;
+    -ms-flex: unset;
+    flex: unset;
+  }
+
+  .form-steps__step:nth-child(2) {
+    left: 0;
+  }
+
+  .form-steps__step:nth-child(3) {
+    left: 0;
+  }
 }
 
 @media (max-width: 360px) {
