login-page-loading was created

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -17,6 +17,7 @@
 @import ./pages/login-page
 @import ./pages/application-page
 // Components
+@import ./components/spinner
 @import ./components/columng-group
 @import ./components/row-group
 @import ./components/svg-icon
