--- a/app/sass/components/form-box.sass
+++ b/app/sass/components/form-box.sass
@@ -24,3 +24,11 @@
     margin-bottom: 20px
   &__footer
     text-align: center
+  &__loading
+    display: flex
+    align-items: center
+    flex-direction: column
+    justify-content: center
+    min-height: 350px
+    &-spinner
+      margin-bottom: 10px
