search was removed from language selects

--- a/app/pug/partials/lang-select.pug
+++ b/app/pug/partials/lang-select.pug
@@ -3,7 +3,7 @@ include /partials/select
 mixin lang-select(props = {})
 
   +select({
-    bordered:true, selected:true, auto:true, search:true,
+    bordered:true, selected:true, auto:true,
     label:{name:'eng', content:`<img src="images/flags/gb.svg"/><span>English</span>`},
     options:[
       {name:'eng', content:`<img src="images/flags/gb.svg"/><span>English</span>`},
