form-stepper"s mobile view was improved

--- a/app/pug/pages/application-page/step-1/_index.pug
+++ b/app/pug/pages/application-page/step-1/_index.pug
@@ -12,9 +12,9 @@ form.application-form
     h2 Application form <span class="text-surfie-green">1/3</span>
   .application-form__item
     +form-steps([
-      {title:'1. Services & Prices', active:true},
-      {title:'2. Education & Legal'},
-      {title:'3. Contact information'},
+      {title:'Services & Prices', active:true},
+      {title:'Education & Legal'},
+      {title:'Contact information'},
     ])
   .application-form__item
     include ./card-1
