--- a/app/pug/pages/application-page/step-3/_index.pug
+++ b/app/pug/pages/application-page/step-3/_index.pug
@@ -9,9 +9,9 @@ form.application-form
     h2 Application form <span class="text-surfie-green">1/3</span>
   .application-form__item
     +form-steps([
-      {title:'1. Services & Prices', done:true},
-      {title:'2. Education & Legal', done:true},
-      {title:'3. Contact information', active:true},
+      {title:'Services & Prices', done:true},
+      {title:'Education & Legal', done:true},
+      {title:'Contact information', active:true},
     ])
   .application-form__item
     include ./card-1
