--- a/app/pug/pages/application-page/step-2/_index.pug
+++ b/app/pug/pages/application-page/step-2/_index.pug
@@ -15,9 +15,9 @@ form.application-form
     h2 Application form <span class="text-surfie-green">1/3</span>
   .application-form__item
     +form-steps([
-      {title:'1. Services & Prices', done:true},
-      {title:'2. Education & Legal', active:true},
-      {title:'3. Contact information'},
+      {title:'Services & Prices', done:true},
+      {title:'Education & Legal', active:true},
+      {title:'Contact information'},
     ])
   .application-form__item
     include ./card-1
