--- a/app/sass/components/form-steps.sass
+++ b/app/sass/components/form-steps.sass
@@ -5,8 +5,6 @@ $c-text  : #9b9b9b
 .form-steps
   display: flex
   align-items: center
-  +media-max($bp-sm)
-    flex-wrap: wrap
   &__step
     position: relative
     flex: 1
@@ -14,9 +12,8 @@ $c-text  : #9b9b9b
     border-bottom: 3px solid transparent
     background-color: $c-white
     background-color: rgba($c-white, 1.3)
-    +media-max($bp-sm)
-      width: calc( 100% - 10px )
-      flex: unset
+    +media-max($bp-md)
+      padding: 14px 0
     &:after
       position: absolute
       content: ''
@@ -35,28 +32,31 @@ $c-text  : #9b9b9b
       &:after
         border-left-color: $c-step-1
     &:nth-child(2)
+      padding-left: 10px
       left: -10px
       background-color: $c-step-2
       z-index: 2
-      +media-max($bp-sm)
-        left: 0
       &:after
         border-left-color: $c-step-2
     &:nth-child(3)
+      padding-left: 10px
       left: -10px
       background-color: $c-step-1
       z-index: 1
-      +media-max($bp-sm)
-        left: 0
       &:after
         border-left-color: $c-step-1
     // State
     &.is-active
       border-color: $c-surfie-green
       background-color: $c-white
+      +media-max($bp-md)
+        flex: 3
       .form-steps__title
         color: $c-mine-shaft
         font-weight: 700
+        &-text
+          +media-max($bp-md)
+            display: block
       &:after
         border-left-color: $c-white
     &.is-done
@@ -76,3 +76,6 @@ $c-text  : #9b9b9b
     font-weight: 600
     color: $c-text
     user-select: none
+    &-text
+      +media-max($bp-md)
+        display: none
