employer-application-page was created

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -16,6 +16,7 @@
 // Pages
 @import ./pages/login-page
 @import ./pages/application-page
+@import ./pages/employer-application-page
 // Components
 @import ./components/spinner
 @import ./components/columng-group
