latest fixes were added

--- a/app/pug/pages/application-page/step-1/card-2.pug
+++ b/app/pug/pages/application-page/step-1/card-2.pug
@@ -8,7 +8,7 @@
         .row-group__item
           +radio({label:'Yes', name:'translation', value:'yes'})(data-radio-toggle)
         .row-group__item
-          +radio({label:'No', name:'translation', value:'no', checked:true})
+          +radio({label:'No', name:'translation', value:'no'})
 
   div(data-radio-toggle-content="translation")
     .application-form__card-line
