--- a/app/pug/pages/application-page/step-1/card-7.pug
+++ b/app/pug/pages/application-page/step-1/card-7.pug
@@ -7,7 +7,7 @@
         .row-group__item
           +radio({label:'Yes', name:'transcribing', value:'yes'})(data-radio-toggle)
         .row-group__item
-          +radio({label:'No', name:'transcribing', value:'no', checked:true})
+          +radio({label:'No', name:'transcribing', value:'no'})
 
   div(data-radio-toggle-content="transcribing")
     .application-form__card-line
