--- a/app/pug/pages/application-page/step-2/card-3.pug
+++ b/app/pug/pages/application-page/step-2/card-3.pug
@@ -10,7 +10,7 @@
         .row-group__item
           +radio({label:'Yes', name:'invoiceAbility', value:'yes'})(data-radio-toggle)
         .row-group__item
-          +radio({label:'No', name:'invoiceAbility', value:'no', checked:true})
+          +radio({label:'No', name:'invoiceAbility', value:'no'})
 
   div(data-radio-toggle-content="invoiceAbility")
     .application-form__card-line
