--- a/app/sass/components/button.sass
+++ b/app/sass/components/button.sass
@@ -27,6 +27,7 @@
       opacity: 0.8
   &:focus
     color: $c-white
+    transform: scale(0.8)
     &:after
       box-shadow: 0 0 0 0.2rem rgba($c-surfie-green, .5)
 
