--- a/app/sass/components/select.sass
+++ b/app/sass/components/select.sass
@@ -102,11 +102,9 @@ $select-height: 45px
     &>*:not(:last-child)
       margin-right: 5px
     &:hover
-      background-color: $c-surfie-green
-      color: $c-white
+      background-color: $c-athens-gray
     // State
     &.is-selected
       font-weight: 600
       color: $c-tundora
-      &:hover
-        background-color: transparent
+      background-color: $c-alto
