--- a/app/pug/pages/application-page/step-1/card-3.pug
+++ b/app/pug/pages/application-page/step-1/card-3.pug
@@ -7,7 +7,7 @@
         .row-group__item
           +radio({label:'Yes', name:'proofreading', value:'yes'})(data-radio-toggle)
         .row-group__item
-          +radio({label:'No', name:'proofreading', value:'no', checked:true})
+          +radio({label:'No', name:'proofreading', value:'no'})
 
   div(data-radio-toggle-content="proofreading")
     .application-form__card-line
