--- a/app/pug/pages/application-page/step-1/card-5.pug
+++ b/app/pug/pages/application-page/step-1/card-5.pug
@@ -7,7 +7,7 @@
         .row-group__item
           +radio({label:'Yes', name:'interpreting', value:'yes'})(data-radio-toggle)
         .row-group__item
-          +radio({label:'No', name:'interpreting', value:'no', checked:true})
+          +radio({label:'No', name:'interpreting', value:'no'})
 
   div(data-radio-toggle-content="interpreting")
     +times(2)
