--- a/app/pug/pages/application-page/step-1/card-6.pug
+++ b/app/pug/pages/application-page/step-1/card-6.pug
@@ -7,7 +7,7 @@
         .row-group__item
           +radio({label:'Yes', name:'writing', value:'yes'})(data-radio-toggle)
         .row-group__item
-          +radio({label:'No', name:'writing', value:'no', checked:true})
+          +radio({label:'No', name:'writing', value:'no'})
 
   div(data-radio-toggle-content="writing")
     .application-form__card-line
