--- a/app/sass/components/radio.sass
+++ b/app/sass/components/radio.sass
@@ -32,18 +32,5 @@
     border-radius: 50%
     border: 2px solid $c-surfie-green
     overflow: hidden
-    &:before
-      position: absolute
-      content: ''
-      width: 10px
-      height: 10px
-      top: 50%
-      left: 50%
-      transform: translate(-50%, -50%)
-      opacity: 0
-      transition: 0.2s
-      background: $c-surfie-green
-      border-radius: 50%
   .radio__input:checked ~ .radio__checkmark
-    &:before
-      opacity: 1
+    background-color: $c-surfie-green
