--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -1016,7 +1016,7 @@ p,
 }
 
 .form-group__header {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .form-divider {
@@ -1309,24 +1309,8 @@ p,
   overflow: hidden;
 }
 
-.radio__checkmark:before {
-  position: absolute;
-  content: '';
-  width: 10px;
-  height: 10px;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  opacity: 0;
-  -webkit-transition: 0.2s;
-  transition: 0.2s;
-  background: #0E7D7D;
-  border-radius: 50%;
-}
-
-.radio .radio__input:checked ~ .radio__checkmark:before {
-  opacity: 1;
+.radio .radio__input:checked ~ .radio__checkmark {
+  background-color: #0E7D7D;
 }
 
 .checkbox {
@@ -1480,6 +1464,8 @@ p,
 
 .button:focus {
   color: #FFFFFF;
+  -webkit-transform: scale(0.8);
+  transform: scale(0.8);
 }
 
 .button:focus:after {
@@ -1782,17 +1768,13 @@ p,
 }
 
 .select__option:hover {
-  background-color: #0E7D7D;
-  color: #FFFFFF;
+  background-color: #EBEBEF;
 }
 
 .select__option.is-selected {
   font-weight: 600;
   color: #444444;
-}
-
-.select__option.is-selected:hover {
-  background-color: transparent;
+  background-color: #DADADA;
 }
 
 .status-message {
