--- a/app/pug/pages/application-page/step-1/card-2.pug
+++ b/app/pug/pages/application-page/step-1/card-2.pug
@@ -13,182 +13,50 @@
   div(data-radio-toggle-content="translation")
     .application-form__card-line
       .row
-        .col-12.col-lg-6.mb-6.mb-md-0
+        .col-12.col-md-6
+          .form-group
+            .form-group__header
+              p What combinations do you translate?
+            +select({
+              label:{name:'select1', content:`<span>Select 1</span>`},
+              options:[
+                {name:'select1', content:`<span>Select 1</span>`},
+                {name:'select2', content:`<span>Select 2</span>`},
+                {name:'select3', content:`<span>Select 3</span>`},
+              ]
+            })
+
+    .application-form__card-line
+      .row
+        .col-12.col-md-6.col-lg-7.mb-6.mb-md-0
           .form-group
             .form-group__header
               p What combinations do you translate?
             .row
-              .col-12.col-md-6.mb-4.mb-lg-0
+              .col-12.col-lg-6.mb-4.mb-lg-0
                 .input-group
                   .input-group__prepend
                     p From
                   .input-group__input
                     +lang-alt-select()
-              .col-12.col-md-6
+              .col-12.col-lg-6
                 .input-group
                   .input-group__prepend
                     p To
                   .input-group__input
                     +lang-alt-select()
-
-    .application-form__card-line
-      .row
-        .col-12.col-lg-9
-          .row
-            .col-12.col-md-6
-              .form-group
-                .form-group__header
-                  p How do you calculate the price?
-                +select({
-                  label:{name:'select1', content:`<span>Select 1</span>`},
-                  options:[
-                    {name:'select1', content:`<span>Select 1</span>`},
-                    {name:'select2', content:`<span>Select 2</span>`},
-                    {name:'select3', content:`<span>Select 3</span>`},
-                  ]
-                })
-            .col-12.col-md-6
-              .form-group
-                .form-group__header
-                  p Your prefered price per <span class="font-bold">1700 c.w.s.:</span>
-                .input-group
-                  .input-group__input
-                    +input({})(type="number" placeholder="0.00")
-                  .input-group__append.input-group__append--p-0
-                    +currency-select()
-
-    .application-form__card-line
-      +button({type:'bordered', border:'silver-chalice'})(type="button")
-        span Remove this
-        span.button__icon
-          +icon({name:'minus', fill:'silver-chalice', width:'14', height:'2'})
-
-    .application-form__card-line
-      .row
-        .col-12.col-lg-6.mb-6.mb-md-0
+        .col-12.col-md-6.col-lg-5
           .form-group
             .form-group__header
-              p What combinations do you translate?
-            .row
-              .col-12.col-md-6.mb-4.mb-lg-0
-                .input-group
-                  .input-group__prepend
-                    p From
-                  .input-group__input
-                    +lang-alt-select()
-              .col-12.col-md-6
-                .input-group
-                  .input-group__prepend
-                    p To
-                  .input-group__input
-                    +lang-alt-select()
-
-    .application-form__card-line
-      .row
-        .col-12.col-lg-9
-          .row
-            .col-12.col-md-6
-              .form-group
-                .form-group__header
-                  p How do you calculate the price?
-                +select({
-                  label:{name:'select1', content:`<span>Select 1</span>`},
-                  options:[
-                    {name:'select1', content:`<span>Select 1</span>`},
-                    {name:'select2', content:`<span>Select 2</span>`},
-                    {name:'select3', content:`<span>Select 3</span>`},
-                  ]
-                })
-            .col-12.col-md-6
-              .form-group
-                .form-group__header
-                  p Your prefered price per <span class="font-bold">1700 c.w.s.:</span>
-                .input-group
-                  .input-group__input
-                    +input({})(type="number" placeholder="0.00")
-                  .input-group__append.input-group__append--p-0
-                    +currency-select()
+              p Your prefered price per <span class="font-bold">1700 c.w.s.:</span>
+            .input-group
+              .input-group__input
+                +input({})(type="number" placeholder="0.00")
+              .input-group__append.input-group__append--p-0
+                +currency-select()
 
     .application-form__card-line
       +button({type:'bordered'})(type="button")
         span Add combination
         span.button__icon
           +icon({name:'plus', fill:'surfie-green', width:'14', height:'14'})
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-//- .application-form__card
-
-//-   .application-form__card-line
-//-     .form-group
-//-       .form-group__header
-//-         h4 Translation
-//-       .row-group
-//-         .row-group__item
-//-           +radio({label:'Yes', name:'translation', value:'yes'})(data-radio-toggle)
-//-         .row-group__item
-//-           +radio({label:'No', name:'translation', value:'no', checked:true})
-
-//-   div(data-radio-toggle-content="translation")
-//-     .application-form__card-line
-//-       .row
-//-         .col-12.col-md-6
-//-           .form-group
-//-             .form-group__header
-//-               p How do you calculate the price?
-//-             +select({
-//-               label:{name:'select1', content:`<span>Select 1</span>`},
-//-               options:[
-//-                 {name:'select1', content:`<span>Select 1</span>`},
-//-                 {name:'select2', content:`<span>Select 2</span>`},
-//-                 {name:'select3', content:`<span>Select 3</span>`},
-//-               ]
-//-             })
-
-//-     .application-form__card-line
-//-       .row
-//-         .col-12.col-md-6.col-lg-7.mb-6.mb-md-0
-//-           .form-group
-//-             .form-group__header
-//-               p What combinations do you translate?
-//-             .row
-//-               .col-12.col-lg-6.mb-4.mb-lg-0
-//-                 .input-group
-//-                   .input-group__prepend
-//-                     p From
-//-                   .input-group__input
-//-                     +lang-alt-select()
-//-               .col-12.col-lg-6
-//-                 .input-group
-//-                   .input-group__prepend
-//-                     p To
-//-                   .input-group__input
-//-                     +lang-alt-select()
-//-         .col-12.col-md-6.col-lg-5
-//-           .form-group
-//-             .form-group__header
-//-               p Your prefered price per <span class="font-bold">1700 c.w.s.:</span>
-//-             .input-group
-//-               .input-group__input
-//-                 +input()(type="number" placeholder="0.00")
-//-               .input-group__append.input-group__append--p-0
-//-                 +currency-select()
-
-//-     .application-form__card-line
-//-       +button({type:'bordered'})(type="button")
-//-         span Add combination
-//-         span.button__icon
-//-           +icon({name:'plus', fill:'surfie-green', width:'14', height:'14'})
