--- a/app/pug/pages/application-page/step-1/card-3.pug
+++ b/app/pug/pages/application-page/step-1/card-3.pug
@@ -46,6 +46,6 @@
 
     .application-form__card-line
       +button({type:'bordered'})(type="button")
-        span Add combination
+        span Add language
         span.button__icon
           +icon({name:'plus', fill:'surfie-green', width:'14', height:'14'})
