--- a/app/sass/components/select.sass
+++ b/app/sass/components/select.sass
@@ -89,6 +89,8 @@ $select-height: 45px
     &-scroll
       max-height: 168px
   &__option
+    position: relative
+    overflow: hidden
     display: flex
     align-items: center
     padding: 10px 15px
@@ -97,6 +99,7 @@ $select-height: 45px
     font-weight: 400
     cursor: pointer
     color: $c-silver-chalice
+    z-index: 1
     img
       max-width: 18px
     &>*:not(:last-child)
@@ -108,3 +111,16 @@ $select-height: 45px
       font-weight: 600
       color: $c-tundora
       background-color: $c-alto
+    &-wave
+      position: absolute
+      display: block
+      background-color: $c-alto
+      border-radius: 100%
+      transform: scale(0)
+      z-index: -1
+      animation: ripple 0.5s linear
+
+@keyframes ripple
+  100%
+    opacity: 0
+    transform: scale(2.5)
