--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -1745,6 +1745,8 @@ p,
 }
 
 .select__option {
+  position: relative;
+  overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1757,6 +1759,7 @@ p,
   font-weight: 400;
   cursor: pointer;
   color: #9D9D9D;
+  z-index: 1;
 }
 
 .select__option img {
@@ -1775,6 +1778,34 @@ p,
   font-weight: 600;
   color: #444444;
   background-color: #DADADA;
+}
+
+.select__option-wave {
+  position: absolute;
+  display: block;
+  background-color: #DADADA;
+  border-radius: 100%;
+  -webkit-transform: scale(0);
+  transform: scale(0);
+  z-index: -1;
+  -webkit-animation: ripple 0.5s linear;
+  animation: ripple 0.5s linear;
+}
+
+@-webkit-keyframes ripple {
+  100% {
+    opacity: 0;
+    -webkit-transform: scale(2.5);
+    transform: scale(2.5);
+  }
+}
+
+@keyframes ripple {
+  100% {
+    opacity: 0;
+    -webkit-transform: scale(2.5);
+    transform: scale(2.5);
+  }
 }
 
 .status-message {
