drag and drop box was refactored

--- a/app/pug/pages/application-page/step-2/card-4.pug
+++ b/app/pug/pages/application-page/step-2/card-4.pug
@@ -10,4 +10,6 @@
           | - Attach your CV<br/>
           | - Attach your document with that you can issue the invoice
   .application-form__card-line
-    +drag-and-drop-box()
+    .row
+      .col-12.col-md-6.col-lg-5
+        +drag-and-drop-box()
