--- a/app/sass/components/document-list-item.sass
+++ b/app/sass/components/document-list-item.sass
@@ -2,13 +2,20 @@
   display: flex
   align-items: center
   &__icon
-    margin-right: 20px
+    margin-right: 15px
+    +media-max($bp-sm)
+      margin-right: 10px
   &__title
     font-size: rem(14px)
     font-weight: 400
-    line-height: 1
+    flex: 1
+    line-height: 1.2
     color: $c-silver-chalice
-    margin-right: 15px
+    white-space: nowrap
+    overflow: hidden
+    text-overflow: ellipsis
+    margin-right: 10px
+    +media-max($bp-sm)
   &__delete
     cursor: pointer
     transition: 0.2s
