--- a/app/sass/components/drag-and-drop-box.sass
+++ b/app/sass/components/drag-and-drop-box.sass
@@ -1,13 +1,20 @@
 .drag-and-drop-box
   width: 100%
-  max-width: 350px
   min-height: auto
   border-radius: $r-primary
   border: 1px solid $c-alto
   padding: 20px
+  +media-max($bp-sm)
+    padding: 15px
   &.dz-started
+    display: flex
     .drag-and-drop-box__label
-      margin-bottom: 20px
+      order: 1
+      padding-left: 20px
+      +media-max($bp-sm)
+        padding-left: 15px
+      &-title
+        display: none
   &__label
     display: flex
     align-items: center
@@ -20,8 +27,12 @@
   &__tpl
     display: none
   &__preview
+    flex: 1
     &-scroll
       max-height: 160px
+      padding-right: 15px
+      +media-max($bp-sm)
+        padding-right: 10px
     .simplebar-content
       &>*:not(:last-child)
         margin-bottom: 5px
