--- a/app/sass/components/select.sass
+++ b/app/sass/components/select.sass
@@ -8,6 +8,7 @@ $select-height: 45px
   &.is-expanded
     border-radius: $r-primary $r-primary 0 0
     .select__label
+      border-radius: $r-primary $r-primary 0 0
       &:after
         transform: rotate(180deg)
 
@@ -76,16 +77,16 @@ $select-height: 45px
     position: absolute
     display: none
     min-width: 100%
-    top: calc(100% + 1px)
+    top: 100%
     background-color: $c-white
     border-radius: 0 0 $r-primary $r-primary
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15)
+    overflow: hidden
     z-index: 200
   &__search
     padding: 10px
     width: auto
   &__options
-    overflow: hidden
     &-scroll
       max-height: 168px
   &__option
